Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16005

galera suite MTR tests MW-328B and MW-328C sporadic failures

    XMLWordPrintable

Details

    Description

      MariaDB versions 10.1 and 10.2 show sporadic failures with mtr galera suite tests MW- 328B and 328C. Failure is about excessive warnings found in error log after test execution, like here:

      galera.MW-328B 'xtradb'                  [ fail ]  Found warnings/errors in server log file!
              Test ended at 2018-04-24 12:27:59
      line
      safe_mutex: Found wrong usage of mutex 'LOCK_wsrep_thd' and 'LOCK_thd_data'
      ^ Found warnings in /home/seppo/work/wsrep/mariadb-server/mysql-test/var/log/mysqld.2.err
      

      In 10.3, similar warnings happen, but the deadlocking mutexes are: LOCK_thd_kill and LOCK_wsrep_thd

      How to Reproduce:
      1. Prepare debug build of 10.1, 10.2 or 10.3 version
      2. start mtr test, e.g. like here:
      ./mtr galera.MW-328B --repeat=100

      Attachments

        Issue Links

          Activity

            People

              seppo Seppo Jaakola
              seppo Seppo Jaakola
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d
                  1d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.