sql/sql_prepare.cc
@@ -3920,7 +3920,7 @@ reexecute:
 
   if (WSREP_ON)
   {
-    mysql_mutex_lock(&thd->LOCK_wsrep_thd);
+    mysql_mutex_lock(&thd->LOCK_thd_data);
     switch (thd->wsrep_conflict_state)
     {
       case CERT_FAILURE:
@@ -3936,7 +3936,7 @@ reexecute:
       default:
         break;
     }
-    mysql_mutex_unlock(&thd->LOCK_wsrep_thd);
+    mysql_mutex_unlock(&thd->LOCK_thd_data);
   }
 #endif /* WITH_WSREP */
 
@@ -3957,7 +3957,6 @@ reexecute:
 
   return error;
 }
-
 
 bool
 Prepared_statement::execute_server_runnable(Server_runnable *server_runnable)
